--- a/DQPlayer/DQPlayer/Base.lproj/Main.storyboard
+++ b/DQPlayer/DQPlayer/Base.lproj/Main.storyboard
@@ -20,12 +20,31 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0l-NC-8GB">
+                                <rect key="frame" x="135" y="394" width="104" height="30"/>
+                                <color key="backgroundColor" red="0.6082284376" green="0.91099815159999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="efX-ST-Iw7"/>
+                                    <constraint firstAttribute="width" constant="104" id="gVg-HP-3aR"/>
+                                </constraints>
+                                <state key="normal" title="测试一下"/>
+                                <connections>
+                                    <action selector="test:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NU4-7z-fly"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="W0l-NC-8GB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="135" id="ayJ-r1-6oc"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="W0l-NC-8GB" secondAttribute="bottom" constant="243" id="gHO-oJ-5sW"/>
+                            <constraint firstAttribute="trailing" secondItem="W0l-NC-8GB" secondAttribute="trailing" constant="136" id="yAB-gr-1Vl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="209" y="105"/>
+            <point key="canvasLocation" x="271" y="98"/>
         </scene>
     </scenes>
 </document>
